hosted icons locally--but apparently the issue with icons not loading on mobile was because of a scope issue with calling the reset() function inside of an eventlistener

--- a/index.css
+++ b/index.css
@@ -26,7 +26,7 @@ body {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  width: 500px;
+  max-width: 500px;
   margin-top: 40%;
   flex-flow: row wrap;
 }
